--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,13 @@ body {
     background-color: rgb(0, 160, 0) !important;
 }
 
+.stroke {
+    text-shadow: 1px 0 0 black,
+                 0 1px 0 black,
+                 -1px 0 0 black,
+                 0 -1px 0 black;
+}
+
 .green-rect {
     width: 16em !important;
     height: 8em !important;
@@ -44,7 +51,7 @@ body {
 
 .hero-bg {
     min-height: 75vh;
-    background-image: url(../assets/images/lawn.jpg);
+    background-image: url(../assets/images/lawn.webp);
     background-size: cover;
     background-position: center bottom;
 }
@@ -107,7 +114,7 @@ body {
 }
 
 .bg-why {
-    background-image: url(../assets/images/Grass.jpg);
+    background-image: url(../assets/images/Grass.webp);
     background-size: cover;
     background-position: center bottom;
 }
@@ -136,7 +143,7 @@ body {
 }
 
 .bg-footer {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/mower.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/mower.webp);
     background-size: cover;
     background-position: top center;
 }
@@ -167,7 +174,7 @@ body {
 
 .about-img {
     width: 100%;
-    max-height: 100%;
+    height: auto;
     object-fit: cover;
     object-position: center;
 }
@@ -175,7 +182,7 @@ body {
 /* Testimonials Page */
 
 .test-hero {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/Grass.jpg);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/images/Grass.webp);
     background-size: cover;
     background-position: bottom center;
     min-height: 33vh;
